<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AlbumSlideshowActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Album_slideshow_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/slide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Album_slideshow_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Album_slideshow_toolbar"
        android:text="@string/caption"
        android:textColor="@color/white"
        android:textSize="15sp" />
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"

    <TextView
        android:id="@+id/peopleTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationTag"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:text="@string/People"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/locationTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:text="@string/Location"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>